--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ matrix:
       python: 3.3
 before_install:
  - sudo apt-get update -qq
+ - sudo apt-get install -qq libatlas3gf-base libatlas-dev liblapack-dev
  - python --version
  - sudo pip install numpy scipy --use-mirrors
