--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libatlas3gf-base libatlas-dev liblapack-dev
  - python --version
+ - echo $TRAVIS_PYTHON_VERSION
  - sudo pip install numpy scipy --use-mirrors
