--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: ruby
 compiler:
   - gcc
   - clang
@@ -6,8 +5,10 @@ matrix:
   include:
     - compiler: clang
       python: 2.7
+      language: python
     - compiler: clang
       python: 3.3
+      language: python
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libatlas3gf-base libatlas-dev liblapack-dev
