--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,10 @@ matrix:
       language: python
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libatlas3gf-base libatlas-dev liblapack-dev
+ - sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev
  - python --version
  - echo $TRAVIS_PYTHON_VERSION
+ - mkdir build
+ - cd build
+ - cmake ../
  - sudo pip install numpy scipy --use-mirrors
