fix version string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ project(subgrep)
 cmake_minimum_required(VERSION 2.8)
 
 FIND_PACKAGE(PythonInterp REQUIRED)
-FIND_PACKAGE(PythonLibs PYTHON_VERSION_STRING REQUIRED)
+FIND_PACKAGE(PythonLibs ${PYTHON_VERSION_STRING} REQUIRED)
