require pythonlib version in a different way

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ project(subgrep)
 cmake_minimum_required(VERSION 2.8)
 
 FIND_PACKAGE(PythonInterp REQUIRED)
-FIND_PACKAGE(PythonLibs ${PYTHON_VERSION_STRING} REQUIRED)
+set(PythonLibs_FIND_VERSION ${PYTHON_VERSION_STRING})
+FIND_PACKAGE(PythonLibs REQUIRED)
