--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
     - compiler: clang
       python: 3.3
       language: python
+      env: PREFIX="~/virtualenv/python3.3/"
     - compiler: clang
       ruby: 1.8.7
       language: ruby
@@ -20,5 +21,5 @@ before_install:
  - echo $TRAVIS_PYTHON_VERSION
  - mkdir build
  - cd build
- - cmake ../
+ - cmake -DCMAKE_PREFIX_PATH=${PREFIX} ../
  - sudo pip install numpy scipy --use-mirrors
