--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ before_install:
  - echo $TRAVIS_PYTHON_VERSION
  - mkdir build
  - cd build
- - cmake -DCMAKE_PREFIX_PATH=${PREFIX} ../
+ - cmake -DCMAKE_PREFIX_PATH=$PREFIX ../
  - sudo pip install numpy scipy --use-mirrors
