--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       language: python
       env: PREFIX="~/virtualenv/python3.3/"
     - compiler: clang
-      ruby: 1.8.7
+      rvm: 1.8.7
       language: ruby
 before_install:
  - sudo apt-get update -qq
