--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ matrix:
     - compiler: clang
       python: 2.7
       language: python
-      env: CUSTOM_PKG="sudo pip install numpy scipy"
+      env: CUSTOM_PKG="sudo pip install numpy --use-mirrors && sudo pip install scipy --use-mirrors"
     - compiler: clang
       python: 3.3
       language: python
-      env: CUSTOM_PKG="sudo pip install numpy scipy --use-mirrors" PREFIX="~/virtualenv/python3.3/"
+      env: CUSTOM_PKG="sudo pip install numpy --use-mirrors" PREFIX="~/virtualenv/python3.3/"
     - compiler: clang
       rvm: 1.8.7
       language: ruby
