add numpy detector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 FIND_PACKAGE(PythonInterp REQUIRED)
 set(PythonLibs_FIND_VERSION ${PYTHON_VERSION_STRING})
 FIND_PACKAGE(PythonLibs REQUIRED)
+FIND_PACKAGE(NumPy)
 
 FIND_PACKAGE(Ruby)
 FIND_PACKAGE(RubyNArray)
