--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
     - compiler: clang
       python: 2.7
       language: python
-      env: NUMPY_PKG="sudo pip install numpy --use-mirrors" SCIPY="sudo pip install scipy --use-mirrors"
+      env: NUMPY="sudo pip install numpy --use-mirrors" SCIPY="sudo pip install scipy --use-mirrors"
     - compiler: clang
       python: 3.3
       language: python
@@ -20,7 +20,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev
  - python --version
- - $CUSTOM_PKG
+ - $NUMPY
  - $SCIPY
  - mkdir build
  - cd build
