--- a/.travis.yml
+++ b/.travis.yml
@@ -7,21 +7,21 @@ matrix:
     - compiler: clang
       python: 2.7
       language: python
-      env: NUMPY="sudo pip install numpy --use-mirrors" SCIPY="sudo pip install scipy --use-mirrors"
+      env: EXTRA_PACKAGES="python3-numpy python-scipy"
     - compiler: clang
       python: 3.3
       language: python
-      env: CUSTOM_PKG="sudo pip install numpy scipy --use-mirrors" PREFIX="~/virtualenv/python3.3/"
+      env: EXTRA_PACKAGES="python3-numpy python3-scipy"
     - compiler: clang
       rvm: 1.8.7
       language: ruby
       env: CUSTOM_PKG="gem install narray"
+virtualenv:
+  system_site_packages: true
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev
+ - sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev $EXTRA_PACKAGES
  - python --version
- - $NUMPY
- - $SCIPY
  - mkdir build
  - cd build
  - cmake -DCMAKE_PREFIX_PATH=$PREFIX ../
