--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ matrix:
       rvm: 1.8.7
       language: ruby
       env: CUSTOM_PKG="gem install narray"
+    - compiler: clang
+      language: objective-c
+      env: CUSTOM_PKG="brew update"
 virtualenv:
   system_site_packages: true
 before_install:
@@ -23,4 +26,5 @@ before_install:
  - sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev $EXTRA_PACKAGES
  - mkdir build
  - cd build
+ - $CUSTOM_PKG
  - cmake -DCMAKE_PREFIX_PATH=$PREFIX ../
