fix variable test for osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ virtualenv:
 before_install:
  - if [ -z $OSX ] ; then sudo apt-get update -qq ; fi
  - if [ -z $OSX ] ; then sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev $EXTRA_PACKAGES ; fi
- - if [ $OSX] ; then brew update ; fi
+ - if [ ! -z $OSX ] ; then brew update ; fi
  - mkdir build
  - cd build
  - $CUSTOM_PKG
