try if then else

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,8 @@ matrix:
 virtualenv:
   system_site_packages: true
 before_install:
- - if [ -z $OSX ] ; then sudo apt-get update -qq ; fi
+ - if [ -z $OSX ] ; then sudo apt-get update -qq ; else ; brew update ; fi
  - if [ -z $OSX ] ; then sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev $EXTRA_PACKAGES ; fi
- - if [ ! -z $OSX ] ; then brew update ; fi
  - mkdir build
  - cd build
  - $CUSTOM_PKG
