--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
 virtualenv:
   system_site_packages: true
 before_install:
- - if [ -z $OSX ] ; then sudo apt-get update -qq ; else ; brew update ; fi
+ - if [ -z $OSX ] ; then sudo apt-get update -qq ; else brew update ; fi
  - if [ -z $OSX ] ; then sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev $EXTRA_PACKAGES ; fi
  - mkdir build
  - cd build
