add with CUSTOM_PKG

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,12 @@ matrix:
       env: EXTRA_PACKAGES="python3-scipy"
     - compiler: clang
       language: objective-c
-      env: CUSTOM_PKG="brew update" OSX=1
+      env: CUSTOM_PKG="curl -O https://raw.github.com/rudix-mac/package-manager/master/rudix.py && sudo python rudix.py install rudix && sudo rudix install jinja2" OSX=1
 virtualenv:
   system_site_packages: true
 before_install:
  - if [ -z $OSX ] ; then sudo apt-get update -qq ; else brew update ; fi
  - if [ -z $OSX ] ; then sudo apt-get install -qq cmake libatlas3gf-base libatlas-dev liblapack-dev $EXTRA_PACKAGES ; fi
- - if [ $OSX ] ; then curl -O https://raw.github.com/rudix-mac/package-manager/master/rudix.py && sudo python rudix.py install rudix && sudo rudix install jinja2 ; fi
  - mkdir build
  - cd build
  - $CUSTOM_PKG
