--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ FIND_PACKAGE(PythonInterp REQUIRED)
 set(Python_ADDITIONAL_VERSIONS ${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
 FIND_PACKAGE(PythonLibs)
 FIND_PACKAGE(NumPy)
+if (NUMPY_FOUND)
+  message(found numpy)
+else()
+  message(couldn't find numpy)
+endif()
 
-FIND_PACKAGE(Ruby)
-FIND_PACKAGE(RubyNArray)
