install numpy via pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
     - compiler: clang
       python: 3.3
       language: python
-      env: EXTRA_PACKAGES="python3-scipy"
+      env: CUSTOM_PKG="pip install numpy"
     - compiler: clang
       language: ruby
       rvm: 1.8.7
