--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     - compiler: clang
       language: ruby
       rvm: 1.8.7
-      env: CUSTOM_PKG="gem install narray"
+      env: CUSTOM_PKG="gem install nmatrix"
 virtualenv:
   system_site_packages: true
 before_install:
