small hack for global env variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ matrix:
       language: python
       env:
       - PIP_ARGS=" -I --use-wheel --find-links=http://cache27diy-cpycloud.rhcloud.com/3.3/"
-      - CUSTOM_PKG="echo ${TRAVIS_PYTHON_VERSION}"
+      - PYTHON_VER=$TRAVIS_PYTHON_VERSION
+      - CUSTOM_PKG="echo $PYTHON_VER"
     - compiler: clang
       language: ruby
       rvm: 1.9.3
       env: CUSTOM_PKG="gem install nmatrix"
 before_install:
- - echo $SHELL
  - eval $CUSTOM_PKG
  - echo $TRAVIS_PYTHON_VERSION
 script:
